update analytics tag

--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
 
-    <!-- Core style and script-->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-30G2HTXJYB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-30G2HTXJYB');
+    </script>
+
+    <!-- Core style -->
     <link rel="stylesheet" href="css/style.css">
-
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N8BQL4MLK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-9N8BQL4MLK');
-</script>
-
 </head>
 
 
@@ -93,6 +91,7 @@
         <li><a href="https://florianedemessi.wordpress.com">my wordpress page</a></li>
     </ul>
 
+    <!-- Core script -->
     <script type="text/javascript" src="/js/script.js"></script>
 </body>
 
