--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <h1> Website index</h1>
         <nav>
             <ul class="menu">
+                <li><a href="https://nairolf32.com">Main website</a></li>
+                <li>-</li>
                 <li><a href="#about">About</a></li>
                 <li>-</li>
                 <li><a href="#index">Index</a></li>
@@ -81,14 +83,23 @@
             <li>
                 <a href="https://nair0lf32.github.io/zer0ne">zer0ne</a>
             </li>
-
-            <h2> Fun/Random Projects: </h2>
-
-
+            <li>
+                <a href="https://nair0lf32.github.io/MedicalCheatSheets">MedicalCheatSheets</a>
+            </li>
+            <h2> "Fun"/Random Projects: </h2>
+            <li>
+                <a href="https://nair0lf32.github.io/wallpapers">Wallpapers</a>
+            </li>
+            <li>
+                <a href="https://nair0lf32.github.io/Worldmap">Worldmap</a>
+            </li>
+            <li>
+                <a href="https://nair0lf32.github.io/earth3D">earth3D</a>
+            </li>
+            <li>
+                <a href="https://pos3id0n-production.up.railway.app">pos3id0n</a>
+            </li>
         </ul>
-        <!-- Not hosted on my github -->
-        <h2> Externals: </h2>
-        <li><a href="https://florianedemessi.wordpress.com">my wordpress page</a></li>
     </ul>
 
     <!-- Core script -->
