--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <br> This website is very simple and basic, with no heavy fancy frameworks or glittery effects...Just good
             old plain html/css/javascript.
             <br> You can get all that in the other "web apps" I am creating and all the trash I have been spreading
-            throughout my learning journey.Just follow the links.
+            throughout my learning journey. Just follow the links.
         </p>
     </div>
     <!-- On my github -->
@@ -91,7 +91,7 @@
                 <a href="https://nair0lf32.github.io/wallpapers">Wallpapers</a>
             </li>
             <li>
-                <a href="https://nair0lf32.github.io/Worldmap">Worldmap</a>
+                <a href="https://nair0lf32.github.io/WorldMap">Worldmap</a>
             </li>
             <li>
                 <a href="https://nair0lf32.github.io/earth3D">earth3D</a>
