--- a/index.html
+++ b/index.html
@@ -59,26 +59,29 @@
 
     <div>
         <img class="logo" src="/assets/img/portfolio/self.png" alt="edemessi florian nairolf32 nair0lf32" />
-        <p class="about" id="about"> Hi! I am EDEMESSI Florian (nair0lf32). Welcome to my Personal website!
-            <br> As a "web developper", I create multiple websites (mostly personnal projects for
-            fun) and host them on various platforms, mostly github pages. For the sake of content organization, I
-            decided to make a website that links to my websites, and call it my main one.
+        <p class="about" id="about"> Hi! I am EDEMESSI Florian (nair0lf32). Welcome to my github index!
+            <br> As a "web developper", I create multiple websites (mostly personnal projects for learning or just for
+            fun) and host them on various platforms, like github pages. For the sake of content organization, I
+            decided to make a website that links to some of my websites, and call it my main index.
             <br> This website is very simple and basic, with no heavy fancy frameworks or glittery effects...Just good
             old plain html/css/javascript.
             <br> You can get all that in the other "web apps" I am creating and all the trash I have been spreading
             throughout my learning journey. Just follow the links.
         </p>
     </div>
-    <!-- On my github -->
+    <!-- On my github pages -->
     <ul class="index" id="index">
         <li> <a href="https://nair0lf32.github.io">index(root)</a></li>
         <ul>
             <h2> Personals: </h2>
             <li>
-                <a href="https://nair0lf32.github.io/website">my website</a>
+                <a href="https://nair0lf32.github.io/website">Old website</a>
             </li>
             <li>
-                <a href="https://nair0lf32.github.io/portfolio">my portfolio</a>
+                <a href="https://nair0lf32.github.io/blog">My blog</a>
+            </li>
+            <li>
+                <a href="https://nair0lf32.github.io/portfolio">My portfolio</a>
             </li>
             <li>
                 <a href="https://nair0lf32.github.io/zer0ne">zer0ne</a>
@@ -86,18 +89,10 @@
             <li>
                 <a href="https://nair0lf32.github.io/MedicalCheatSheets">MedicalCheatSheets</a>
             </li>
-            <h2> "Fun"/Random Projects: </h2>
-            <li>
-                <a href="https://nair0lf32.github.io/WorldMap">Worldmap</a>
-            </li>
-            <li>
-                <a href="https://nair0lf32.github.io/earth3D">earth3D</a>
-            </li>
         </ul>
-    </ul>
 
-    <!-- Core script -->
-    <script type="text/javascript" src="/js/script.js"></script>
+        <!-- Core script -->
+        <script type="text/javascript" src="/js/script.js"></script>
 </body>
 
 </html>
