--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <ul class="index" id="index">
         <li> <a href="https://nair0lf32.github.io">index(root)</a></li>
         <ul>
-            <h2> Personals: </h2>
+            <h2> Projects: </h2>
             <li>
                 <a href="https://nair0lf32.github.io/website">Old website</a>
             </li>
